make swagger documentation for ticketsController and fix all issues about tickets
